attached_assets/Pasted-yarn-run-v1-22-22-home-expo-workingdir-build-node-modules-bin-expo-export-embed-eager-platf-1747662611352.txt
yarn run v1.22.22
$ /home/expo/workingdir/build/node_modules/.bin/expo export:embed --eager --platform android --dev false
Starting Metro Bundler
Android node_modules/expo/AppEntry.js ▓▓░░░░░░░░░░░░░░ 16.0% ( 47/264)
Android node_modules/expo/AppEntry.js ▓▓▓░░░░░░░░░░░░░ 24.7% (220/444)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓░░░░░░░░░░ 40.4% (386/607)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓░░░░░░░░░ 47.5% ( 475/1022)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓░░░░░░░░░ 47.5% ( 605/1065)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓░░░░░░░ 61.6% ( 931/1187)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓░░░░░░ 67.0% (1059/1296)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓░░░░░░ 68.5% (1140/1377)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓▓▓░░░░ 75.3% (1383/1613)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓░░░ 83.3% (1760/2016)
Android Bundling failed 37147ms node_modules/expo/AppEntry.js (2353 modules)
SyntaxError: client/src/pages/checkout.tsx: /home/expo/workingdir/build/client/src/pages/checkout.tsx: `import.meta` is not supported in Hermes. Enable the polyfill `unstable_transformImportMeta` in babel-preset-expo to use this syntax.
[0m [90m 11 |[39m [90m// Make sure to call `loadStripe` outside of a component's render to avoid[39m
 [90m 12 |[39m [90m// recreating the `Stripe` object on every render.[39m
[31m[1m>[22m[39m[90m 13 |[39m [36mif[39m ([33m![39m[36mimport[39m[33m.[39mmeta[33m.[39menv[33m.[39m[33mVITE_STRIPE_PUBLIC_KEY[39m) {
 [90m    |[39m      [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 14 |[39m   [36mthrow[39m [36mnew[39m [33mError[39m([32m'Missing required Stripe key: VITE_STRIPE_PUBLIC_KEY'[39m)[33m;[39m
 [90m 15 |[39m }
 [90m 16 |[39m [36mconst[39m stripePromise [33m=[39m loadStripe([36mimport[39m[33m.[39mmeta[33m.[39menv[33m.[39m[33mVITE_STRIPE_PUBLIC_KEY[39m)[33m;[39m[0m
SyntaxError: /home/expo/workingdir/build/client/src/pages/checkout.tsx: `import.meta` is not supported in Hermes. Enable the polyfill `unstable_transformImportMeta` in babel-preset-expo to use this syntax.
[0m [90m 11 |[39m [90m// Make sure to call `loadStripe` outside of a component's render to avoid[39m
 [90m 12 |[39m [90m// recreating the `Stripe` object on every render.[39m
[31m[1m>[22m[39m[90m 13 |[39m [36mif[39m ([33m![39m[36mimport[39m[33m.[39mmeta[33m.[39menv[33m.[39m[33mVITE_STRIPE_PUBLIC_KEY[39m) {
 [90m    |[39m      [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 14 |[39m   [36mthrow[39m [36mnew[39m [33mError[39m([32m'Missing required Stripe key: VITE_STRIPE_PUBLIC_KEY'[39m)[33m;[39m
 [90m 15 |[39m }
 [90m 16 |[39m [36mconst[39m stripePromise [33m=[39m loadStripe([36mimport[39m[33m.[39mmeta[33m.[39menv[33m.[39m[33mVITE_STRIPE_PUBLIC_KEY[39m)[33m;[39m[0m
    at File.buildCodeFrameError (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/file/file.js:193:12)
    at NodePath.buildCodeFrameError (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/index.js:118:21)
    at PluginPass.MetaProperty (/home/expo/workingdir/build/node_modules/babel-preset-expo/build/import-meta-transform-plugin.js:18:44)
    at newFn (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/visitors.js:172:14)
    at NodePath._call (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:49:20)
    at NodePath.call (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:39:18)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:88:31)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitMultiple (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:62:17)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:111:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at traverse (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/index.js:53:34)
    at transformFile (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:80:31)
    at transformFile.next (<anonymous>)
    at run (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:25:12)
    at run.next (<anonymous>)
    at /home/expo/workingdir/build/node_modules/@babel/core/lib/transform-ast.js:23:33
    at Generator.next (<anonymous>)
    at evaluateSync (/home/expo/workingdir/build/node_modules/gensync/index.js:251:28)
    at sync (/home/expo/workingdir/build/node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (/home/expo/workingdir/build/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at transformFromAstSync (/home/expo/workingdir/build/node_modules/@babel/core/lib/transform-ast.js:43:83)
    at Object.transform (/home/expo/workingdir/build/node_modules/metro-react-native-babel-transformer/src/index.js:216:7)
    at transformJSWithBabel (/home/expo/workingdir/build/node_modules/metro-transform-worker/src/index.js:308:45)
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
